# another-intelligence

./: .gitignore  .mcp.example.json  .pre-commit-config.yaml  .typos.toml  .yamllint  CONTRIBUTING.md  LICENSE  PRD.md  README.md  ROADMAP.md  prompt.txt  pyproject.toml  tasks.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml  doc-quality.yml  python-ci.yml
docs/: ARCHITECTURE.md  BASELINE.md  DEVELOPMENT.md  HOOKS.md  MCP-INTEGRATION-TESTING.md  MCP.md  MIGRATION.md  PERMISSIONS.md  PLUGIN-DEVELOPMENT.md  PROMPTING.md  README.md  planning.md
docs/explanation/: ARCHITECTURE.md  MODEL-SCALING.md
docs/how-to/: DEVELOPMENT.md  MIGRATION.md  PLUGIN-DEVELOPMENT.md  PROMPTING.md
docs/reference/: BASELINE.md  HOOKS.md  MCP-INTEGRATION-TESTING.md  MCP.md  PERMISSIONS.md  README.md  planning.md
docs/tutorials/: getting-started.md
scripts/: pre-push-check.sh  sync-exports.py
src/another_intelligence/: __init__.py  __main__.py  brain.py  cli.py  context.py  events.py  executor.py  metrics.py  paths.py  reflex.py  rpe.py  state.py  statusline.py  strategist.py
src/another_intelligence/context/: __init__.py
src/another_intelligence/events/: __init__.py
src/another_intelligence/executor/: __init__.py
src/another_intelligence/hooks/: __init__.py  models.py  registry.py  runner.py
src/another_intelligence/knowledge/: __init__.py  compiler.py  query.py
src/another_intelligence/mcp/: __init__.py  client.py
src/another_intelligence/memory/: __init__.py  pairs.py  preference_pair.py  value_index.py
src/another_intelligence/metrics/: __init__.py
src/another_intelligence/models/: __init__.py  client.py  resolver.py
src/another_intelligence/permissions/: __init__.py  engine.py
src/another_intelligence/plugins/: __init__.py  loader.py  plugin.py
src/another_intelligence/prompts/: system.md
src/another_intelligence/reflex/: __init__.py
src/another_intelligence/rpe/: __init__.py  telemetry.py
src/another_intelligence/state/: __init__.py
src/another_intelligence/statusline/: __init__.py
src/another_intelligence/strategist/: __init__.py
telemetry/: 2026-04-30.jsonl
tests/: test_brain.py  test_cli.py  test_client.py  test_events.py  test_executor.py  test_hooks.py  test_knowledge.py  test_mcp.py  test_memory.py  test_metrics.py  test_permissions.py  test_reflex.py  test_resolver.py  test_rpe.py  test_rpe_integration.py  test_state.py  test_statusline.py  test_strategist.py  test_version.py
tests/brain/: test_e2e.py
tests/events/: test_events.py
tests/hooks/: test_hooks.py
tests/knowledge/: test_knowledge.py
tests/mcp/: test_mcp.py  test_mcp_integration.py
tests/memory/: test_memory.py
tests/metrics/: test_statusline.py
tests/permissions/: test_permissions.py
tests/plugins/: test_loader.py  test_plugin.py
tests/rpe/: test_telemetry.py
tests/strategist/: test_strategist.py
