[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "another-intelligence"
version = "0.1.0"
description = "A persistent neuroscience-grounded digital brain"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "BrainXio", email = "dev@brainxio.org"},
]
keywords = ["ollama", "mcp", "agent", "neuroscience", "ppac", "rpe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.11",
    "click>=8.0",
    "ollama>=0.4",
    "rich>=13.0",
    "psutil>=5.9",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
    "mypy>=1.10",
    "types-psutil",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "yamllint>=1.35",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.10",
    "types-psutil",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "build>=1.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "yamllint>=1.35",
]

[project.scripts]
ai = "another_intelligence.cli:main"

[project.urls]
Homepage = "https://github.com/BrainXio/another-intelligence"
Documentation = "https://github.com/BrainXio/another-intelligence/tree/main/docs"
Repository = "https://github.com/BrainXio/another-intelligence"

[tool.hatch.build.targets.wheel]
packages = ["src/another_intelligence"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --tb=short --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/another_intelligence"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
